fix spacing

--- a/src/scss/sections/_features.scss
+++ b/src/scss/sections/_features.scss
@@ -183,10 +183,6 @@
         padding: 0 8px !important;
         margin: 0 !important;
 
-        @media (max-width: 699px) {
-          padding: 0 16px !important;
-        }
-
         .va_card {
           width: auto;
           height: auto;
